Fix logo alignment on small screens

--- a/ds_judgements_public_ui/sass/includes/_header.scss
+++ b/ds_judgements_public_ui/sass/includes/_header.scss
@@ -51,7 +51,8 @@
 
   &__container {
     @include container;
-    text-align: center;
+    display: flex;
+    justify-content: center;
   }
 
   &__logo {
